# snt-tt

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.dev.yaml  docker-compose.prod.yaml  pyproject.toml  pytest.ini  setup.cfg
app/cli/: market_cli.py
app/core/domain/constants/: universe.py
app/core/domain/entities/: market_analysis.py
app/core/domain/services/: market_analyzer.py
app/core/domain/value_objects/: market_values.py  regions.py  systems.py
app/infrastructure/adapters/: esi_adapter_items.py  esi_adapter_market.py  esi_adapter_players.py  esi_adapter_universe.py
app/infrastructure/api/: cache.py  main.py
app/infrastructure/api/routers/: dependencies.py  items.py  market.py  universe.py
app/infrastructure/api/web/routes/: views.py
app/infrastructure/api/web/static/css/: main.css
app/infrastructure/api/web/static/js/: table-sorter.js
app/infrastructure/api/web/templates/: alerts.html  base.html  dashboard.html  market.html  regions.html
app/infrastructure/api/web/templates/partials/: market_results.html
app/infrastructure/config/: settings.py  templates.py
tests/: debug_market_analysis.py  reproduce_issue.py
