[project]
name = "snt-trade-tool"
version = "0.1.0"
description = "Bot de monitoreo de mercado para EVE Online"
authors = [
    {name = "Marco Antonio Romero", email = "marcoromero.dev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"

[tool.poetry]
name = "snt-trade-tool"
version = "0.1.0"
description = "Bot de monitoreo de mercado para EVE Online"
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
httpx = "^0.25.2"
aiohttp = "^3.9.1"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
python-multipart = "^0.0.6"
jinja2 = "^3.1.2"
rich = "^13.7.0"
typer = "^0.9.0"

# Dependencias opcionales para EVE Online
websockets = "^12.0"
redis = "^5.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
black = "^23.11.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"
pre-commit = "^3.5.0"
isort = "^5.13.2"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
