[metadata]
description-file = README.md

[flake8]
format = wemake
show-source = True
statistics = False
doctests = True
enable-extensions = G

accept-encodings = utf-8
max-complexity = 8
max-line-length = 88
max-arguments = 11
max-try-body-length = 3
radon-max-cc = 12
radon-show-closures = True
radon-no-assert = True

max-imports = 25
max-methods = 31
max-local-variables = 9

exclude =
    .git
    __pycache__
    node_modules
    .env
    .venv
    .vscode
    .pytest_cache
    .mypy_cache
    env
    logs

ignore =
    # Python builtin class attribute
    A003
    # Coding magic comment not found
    C101
    # Missing docstring in public module
    D100
    # Missing docstring in public class
    D101
    # Missing docstring in public method
    D102
    # Missing docstring in public function
    D103
    # Missing docstring in public package
    D104
    # Missing docstring in magic method
    D105
    # Missing docstring in public nested class
    D106
    # Missing docstring in __init__
    D107
    # First line should be in imperative mood
    D401
    # Darglint
    DAR
    # Argument name should be lowercase
    N803
    # RST Docstrings
    RST
    # Line break before binary operator
    W503
    # Upper-case constant in a class
    WPS115
    # Too many module members
    WPS202
    # Found string literal over-use
    WPS226
    # Found function with too much cognitive complexity
    WPS231
    # Ignore f strings warning
    WPS305
    # Found multi-line function type annotation
    WPS320
    # Missing empty line between `coding` magic comment and code
    WPS323
    # `noqa` comments overuse
    WPS402
    # init module with logic
    WPS412
    # Found block variables overlap
    WPS440
    # Found outer scope names shadowing
    WPS442
    # Shadowed class attribute
    WPS601

per-file-ignores =
    __init__.py: F401, F403, WPS300, WPS347, WPS440
    tests/*: S101, WPS432
    app/infrastructure/config/settings.py: N802
    app/infrastructure/adapters/esi_adapter.py: S113, B008
    app/infrastructure/adapters/discord_adapter.py: S113
    app/infrastructure/adapters/telegram_adapter.py: S113

[isort]
include_trailing_comma = true
multi_line_output = 3
line_length = 88
indent = 4
known_first_party = app

[mypy]
check_untyped_defs = True
ignore_missing_imports = True
namespace_packages = True
explicit_package_bases = True
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True

[mypy-app.infrastructure.adapters.esi_adapter]
ignore_errors = True

[mypy-app.infrastructure.adapters.*]
ignore_errors = False
